fix #109